Sync YC Battle app changes
